--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
+  padding-top: 10vh;
   font-size: calc(10px + 2vmin);
   color: white;
 }
